fixed dark mode bugs

--- a/portfolio-website/src/styles/tailwind.css
+++ b/portfolio-website/src/styles/tailwind.css
@@ -21,7 +21,10 @@
   }
   
   body {
-    @apply bg-slate-50 font-sans antialiased;
+    @apply bg-slate-50 font-sans;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -moz-osx-font-smoothing: auto;
+    text-rendering: optimizeLegibility;
     font-feature-settings: "rlig" 1, "calt" 1;
     font-family: 'Inter', ui-sans-serif, system-ui, sans-serif;
     background: var(--app-bg);
